Fixed up navbar-collapse colours

--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,10 @@ body {
 p {
 	font-size: 20px;
 }
+
+.navbar .navbar-toggle .icon-bar {
+  background-color: #FFFFFF; /* Changes regular toggle color */
+}
+.navbar .navbar-toggle .icon-bar:hover {
+  background-color: #FFFFFF; /* Changes toggle color on hover */
+}
